# carmel

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  catn.cc  catn0.cc  install.sh  set_defaults.pl
backoff/: backoff.py
balance/: Makefile  balance.cc  balance.lext  build.sh
carmel/: .cdtproject  .project  CHANGES  CMakeLists.txt  ChangeLog  Doxyfile  LICENSE  Makefile  NOTES  README  ToDo  debug.sh  dependencies.cygwin  dependencies.i686  dependencies.sun4  make-dictionary.pl  training-code.txt
carmel/carmel-tutorial/: cat.fsa  cat.fsa.trained  cat.fsa.trained.noe  cipher.data.noe  cipher.fst.trained  cipher.gold  cipher.wfsa  cipher.wfsa.noe  cipher.wfsa.trained  cluster.data  cluster.data.noe  cluster.fsa  commands  commands.trace  delete.fst  delete.fst.trained  deltrans.data  deltrans.data.compact  epron-jpron.data  epron-jpron.fst  spellout.fst  spellout.fst.trained  tagging.fsa.trained  tagging.fsa.trained.noe  tagging.fst.trained  tagging.key  trans.fst  trans.fst.trained
carmel/doc/: FORMATS  carmel-tutorial.html  carmel-tutorial.ps
carmel/msvc++/: carmel.sln  carmel.vcproj
carmel/sample/: chain.2  chain.corpus  chain.mid  comments  do.graphviz.srilm.sh  egraph  emptyfsa  fsa10  fsa11  fsa2  (+15 more)
cipher/: baseline.2.pl  carmel-quote-words  class-features  class-ngrams  class-word-wfst  count-ngrams  decipher  decipher-classes  do-classes  encipher  epsilon-string-pairs  eval-classes  filter_docid  full-class-channel  soft-classes  split-words  sri2fsa.pl  summary-classes  text-to-classes  unigram-freq-bands  word-accuracy  word-freq
clm/: NOTES  e-parse-yield.pl  extract.clm.sh  phrasal-clm-events  rule_context.txt  stripEF.pl  uniq_srilm.pl
dagtt/: graph.py  invert2dag.py
forest-em/: .gitignore  CMakeLists.txt  Makefile  README  forest-em-button.sh  forest-em-params.cpp  forest-em-params.hpp  forest-em.README  forest-em.cpp  forest-em.hpp  forest.hpp  forestviz.cpp
forest-em/sample/: .gitignore  100.counts  Makefile  best_forest  best_norm  best_weights  byid_rules  forest  forests  ints  norm  norm_and_forests  raw_weight_array  rule_list  testderivs.sh
forest-em/sample/derivs/: first10.deriv  first10.norm  first10.rules  first100.deriv  first100.norm  first100.rules  first1000.deriv  first1000.norm  first1000.rules  first10000.norm
gextract/: 10k.f  10k.info  astronauts.e  astronauts.e-parse  astronauts.f  castronauts.e-parse  check.e-parse.py  dendro.py  do.mono.sh  dumpx.py  e-parse.format.txt  gextract.py  gflags.py  graehl.py  optfunc.py  radu2ptb.pl  reviz.sh  subset-training.py  training.e-parse  training.f  tree.py
graehl/: graehl.mk
main_template/: Makefile  mate.cpp
sblm/: 10.counted  10.eng-parse  10.for-norm  Makefile  README  TODO  add-pcfg-feature  backoff.py  cat-pcfg-for-divide  count.py  dumpx.py  etree-stats.py  etree.py  example.py  fast-lhs-sums-map  graehl.py  had-pcfg-probs  lhs-sums-map  nbest-sblm.py  nbest.py  nbest.txt  ngram.py  pcfg-backoff  pcfg-map  pcfg-map-precomb  pcfg.py  precombine.py  rules  sbmtrule.py  test.sh  test.txt  tree.py  xrs-pcfg-events.cpp
shared/: .gitignore  2hash.cc  2hash.h  2heap.cc  2heap.h  ChangeLog  Debug.h  FixedBuffer.h  LazyKBestTrees.h  Lx_norm.hpp  Makefile  README  SGT.c  SGT.counts.txt  SafeDb.h  __gmsl  _template.hpp  abs_int.hpp  accumulate.hpp  adjustableheap.hpp  adl_print.hpp  adl_to_string.hpp  align.hpp  aligned_dynamic_array.hpp  alloc_new_delete.hpp  alloc_stack.hpp  any_all.hpp  any_callable.hpp  append.hpp  arc.h  array.hpp  array_stream.hpp  assertlvl.hpp  assign_traits.hpp  assoc_container.hpp  atoi_fast.hpp  auto_report.hpp  backtrace.hpp  band_matrix.hpp  barrier.hpp  (+299 more)
utf8/: checked.h  core.h  unchecked.h
util/: .aspell.en.pws  .bashrc  .emacs  .gitconfig  .octaverc  .svn.authorsfile  1count.cc  C-small.cc  add_paths.sh  addlicense.sh  aliases.sh  alignment-links.py  bash.txt  bashlib.sh  bl3.sh  bloblib.sh  c++space  camelcase.pl  ccache-wrapper.sh  charvocab.py  check-condor  cj  close-ns-inplace.pl  codejam-example.cc  codejam.hh  color.xetex  config.fish  datespan.py  dependencies.sh  dictdiff  diffnbest.pl  dotprod.py  dropcaches.c  edit  emacs.reg  etree.py  extract-field-fast.pl  extract-field.pl  featstats.py  findscripts.sh  (+80 more)
(+426 files in other folders)
